# liftlens

./: .dockerignore  .gitignore  CHANGELOG.md  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_all_workflows.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: api_reference.md  contributing.md  index.md  mkdocs.yml  user_guide.md
examples/: revenue_test.yaml
scripts/: generate_synthetic.py  migrate_registry.py
src/liftlens/: __init__.py  cli.py
src/liftlens/api/: dashboard.py  security.py  server.py
src/liftlens/config/: __init__.py  schemas.py  settings.py
src/liftlens/core/: registry.py  session.py
src/liftlens/data/: io.py  transform.py  validator.py
src/liftlens/engine/: parallel.py
src/liftlens/metrics/: __init__.py  composite.py  monitoring.py  primary.py  registry.py  robust.py
src/liftlens/report/: builder.py  renderers.py
src/liftlens/report/templates/: report.html.j2  report.md.j2
src/liftlens/stats/: adjustments.py  diagnostics.py  heterogeneity.py  inference.py  modeling.py  power.py  sequential.py
src/liftlens/utils/: decorators.py  functional.py  logging.py
src/liftlens/viz/: diagnostics.py  distributions.py  effects.py  reporting.py
src/liftlens/workflows/: pipeline.py  presets.py
tests/: conftest.py
tests/e2e/: test_advanced_features.py  test_full_pipeline_csv.py  test_full_workflow.py  test_pipeline_postgres.py
tests/integration/: test_api.py  test_cli.py
tests/performance/: test_parallel.py
tests/security/: test_api_auth.py
tests/stress/: test_large_data.py
tests/unit/test_data/: test_io.py  test_transform.py  test_validator.py
tests/unit/test_metrics/: test_monitoring.py  test_primary.py  test_robust.py
tests/unit/test_report/: test_builder.py
tests/unit/test_stats/: test_diagnostics.py  test_inference.py
tests/unit/test_viz/: test_distributions.py
tests/unit/test_workflows/: test_pipeline.py
